# diplomski_rad

./: README.md
DocumentExtractor/: .gitignore  CMakeLists.txt  DocumentExtractor.cc  DocumentExtractor.h  build-emscripten.sh  build-unix.sh
DocumentExtractor/emscripten/: CMakeLists.txt  Extractor.cc  Extractor.h  glue_stub.cc  index.html  interfaces.idl  interfaces_glue.cpp  interfaces_glue.js
DocumentExtractor/linux/: CMakeLists.txt  main.cc
DocumentExtractor/web-test/src-document-extractor/: wasm-worker.js
DocumentExtractor/web-test/src-opencv/: index.html  main.js  wasm-worker.js
